# allegro_hand_v4_linux_python

grasp/: CMakeLists.txt  RockScissorsPaper.cpp  allegro_hand_client.py  main.cpp
